--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-scroll-into-view": "^1.9.4",
+    "react-scroll-motion": "^0.2.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
