--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "browserslist": "^4.16.6",
+    "color-string": "^1.5.5",
+    "dns-packet": "^1.3.4",
+    "glob-parent": "^5.1.2",
     "hamburger-react": "^2.4.0",
+    "hosted-git-info": "^2.8.9",
+    "is-svg": "^4.3.1",
     "node-sass": "^5.0.0",
+    "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -18,7 +25,10 @@
     "react-scroll-into-view": "^1.9.4",
     "react-scroll-motion": "^0.2.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^1.0.1"
+    "ssri": "^6.0.2",
+    "trim-newlines": "^3.0.1",
+    "web-vitals": "^1.0.1",
+    "ws": "^7.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
